# CG-CV

./: .gitignore  CMakeLists.txt  configure
cg/: CMakeLists.txt
cg/common/: BVHTree.cpp  BVHTree.h  BVHTreeNode.cpp  BVHTreeNode.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  FileUtils.cpp  FileUtils.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Serialization.h  Triangle.cpp  Triangle.h  cgmath.h  color.h  formats.h  main.cpp  matrix.h  mkdir.h  surface.cpp  surface.h  vector.h
cg/common/cereal/archives/: binary.hpp  json.hpp  xml.hpp
cg/common/cereal/details/: polymorphic_impl.hpp
cg/common/cereal/types/: array.hpp  bitset.hpp  chrono.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  queue.hpp  set.hpp  stack.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp
cg/task1a/: CMakeLists.txt  Cube.h  Item.h  Plane.cpp  Plane.h  Scene1a.cpp  Scene1a.h  Sphere.cpp  Sphere.h  main.cpp  task1a.cpp
cg/task1a/configs/: plane.json  sphere.json  sphereandplane.json  spheres.json
cg/task1b/: CMakeLists.txt  Scene1b.cpp  Scene1b.h  main.cpp  task1b.cpp
cg/task1b/configs/: camera.json  cube.json  cubes-antialiasing.json  cubes.json  reflection1.json  reflection2.json  reflection3.json  reflection4.json  reflection5.json  sphere.json
cg/task1b/data/: cube.scene  cubes.scene  glass1.scene  glass2.scene  glass3.scene  reflection1.scene  reflection2.scene  reflection3.scene  reflection4.scene  reflection5.scene  room1.scene  room2.scene  room3.scene  scene1.scene  sphere.scene
cgcvcommon/lpng/: CMakeLists.txt
cgcvcommon/zlib/: CMakeLists.txt
cv/: CMakeLists.txt
cv/task1a/: CMakeLists.txt  cathedral.json  emir.json  main.cpp  train.json
cv/task1b/: CMakeLists.txt  lamp.json  main.cpp  mall.json  window.json
